--- a/mathquiz.css
+++ b/mathquiz.css
@@ -1,3 +1,8 @@
+/* 
+  Copyright 2011 Kevin Reid, under the terms of the MIT X license
+  found at <http://www.opensource.org/licenses/mit-license.html>.
+*/
+
 html, body, .choices, .choices li, .choices button {
     margin: 0;
     padding: 0;
